SERVER-19266 An error document is returned with result set

Make sure that the error result flag is set when receiving one from of the shards during GET_MORE.

(cherry picked from commit eb79bd1fe807512e54c68c5982b2a24fa1d66bba)

Conflicts:
	src/mongo/client/parallel.cpp